# Dynamic-Multi-Robot-Coverage

./: .gitignore  LICENSE  README.md
coverage_control2/: CMakeLists.txt  bad_cast_issue.txt  intersection_issue.txt  package.xml
coverage_control2/cfg/: params.yaml  params_base_case_lloyd.yaml  params_test.yaml
coverage_control2/figures/: workload-test.txt
coverage_control2/figures/E1/: Agent1_skeleton.eps  Agent2_skeleton.eps  Agent3_skeleton.eps
coverage_control2/figures/E2/: Agent1_skeleton.eps  Agent2_skeleton.eps  Agent3_skeleton.eps
coverage_control2/figures/E_A4_Middle/: all_vlv_history.json
coverage_control2/figures/E_A4_Rect_Clean/: all_vlv_history.json
coverage_control2/figures/E_updated_1/: workloads.txt
coverage_control2/figures/old_history/: all_vlv_history.json
coverage_control2/figures/presentation_3_Nov/E1/E1_Geodesic/: workloads.txt
coverage_control2/figures/presentation_3_Nov/E1/E1_Lloyd/: workloads.txt
coverage_control2/figures/presentation_3_Nov/E2/E2_Geodesic/: all_vlv_history.json  workloads.txt
coverage_control2/figures/presentation_3_Nov/E2/E2_Lloyd/: all_vlv_history.json  workloads.txt
coverage_control2/figures/presentation_3_Nov/E3/E3_Geodesic/: all_vlv_history.json  workloads.txt
coverage_control2/figures/presentation_3_Nov/E9/: workloads.txt
coverage_control2/include/coverage_control2/: BFSAgentImproved.h  BFSVertex.h  coverage_agent.h  coverage_map.h  coverage_utils.h  errors.txt  geodesic_center.hpp
coverage_control2/launch/: parametrized_run.launch  run.launch  run4.launch  run5.launch  run6.launch  run9.launch  run_monitor_only.launch  run_one_agent.launch
coverage_control2/msg/: AgentState.msg  AgentStateArray.msg  GeodesicPartition.msg  HistoryStep.msg  Polygon.msg  PolygonWithHoles.msg  UtilityDebug.msg
coverage_control2/scripts/: all_vlv_history_plot.py  final_state_plot.py  geodesic_plot.py  metric_partition_test.py  monitor.py  multidirectional_bfs.py  objective_plot.py  stationary_geodesic_vd_plot.py  vlv_history_plot.py
coverage_control2/src/: BFSAgentImproved.cpp  BFSVertex.cpp  coverage_agent.cpp  coverage_map.cpp  coverage_node.cpp  coverage_utils.cpp
coverage_control2/srv/: GetMetricPartition.srv  PrintMass.srv
(+82 files in other folders)
